--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "babel-preset-expo": "~8.1.0",
-    "jest-expo": "~37.0.0"
+    "jest-expo": "~37.0.0",
+    "logkitty": ">=0.7.1"
   },
   "private": true
 }
